@@ -1,3 +1,10 @@
+2007-10-13  Vitaly Alexeev <tishka92@yahoo.com>
+
+		* base/tu_loadlib.cpp
+		* base/tu_loadlib.h
+		* gameswf/gameswf_freetype.cpp
+		Ported to Linux
+
 2007-10-07  Vitaly Alexeev <tishka92@yahoo.com>
 
 		* gameswf/gameswf.h
